# github-star-messenger

./: .gitignore  Cargo.toml  payload.json  shell.nix  star.payload.json  unknow.payload.json
.direnv/: nix-profile-.466.596a8e828c5  nix-profile-.466.596a8e828c5.rc
src/: g2s.rs  github-star-messenger.rs
