[package]
name = "github-star-messenger"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/github-star-messenger.rs"
crate-type = ["cdylib"]

[dependencies]
github-flows = "0.2"
slack-flows = "0.2.5"
sendgrid-flows = "0.1.1"
tokio_wasi = { version = "1.25.0", features = ["macros", "rt"] }
anyhow = "1"
